# obs-auto-subtitle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README-zh.md  README.md  azure-pipelines.yml  build-now.cmd  buildspec.json  conanfile.txt
.github/scripts/: .Aptfile  .build.zsh  Build-Windows.ps1
.github/scripts/utils.zsh/: setup_linux
.github/workflows/: build-project.yaml  main.yml
CI/: build-macos.sh  build-windows.ps1  checkout-cmake-obs-windows.cmd  download-obs-deps.cmd  install-build-obs-macos.sh  install-dependencies-macos.sh  install-qt-win.cmd  package-macos.sh  package-windows.cmd  prepare-windows.cmd
CI/windows/: build-obs-windows.ps1  build_support_windows.ps1  checkout-obs-windows.ps1
build-aux/: .run-format.zsh
cmake/: FetchGRPC.cmake  ObsPluginHelpers.cmake
cmake/Modules/: FindAsio.cmake  FindWebsocketpp.cmake
cmake/bundle/macos/: installer-macos.pkgproj.in
cmake/bundle/windows/: installer-Windows.iss.in
cmake/common/: buildspec_common.cmake  compiler_common.cmake
cmake/linux/: compilerconfig.cmake
cmake/macos/: buildspec.cmake  xcode.cmake
cmake/windows/: buildspec.cmake
data/locale/: en-US.ini  zh-CN.ini
installer/: installer.iss  installer.iss.in  obs-auto-subtitle.pkgproj  obs-auto-subtitle.pkgproj.in
src/: obs-auto-subtitle.cpp  obs-auto-subtitle.h  obs-autosub-filter.cpp  obs-autosub-filter.h  obs-autosub-source.cpp
src/builder/: GSTransBuilder.cpp  GSTransBuilder.h  PropBuilderBase.h  SpeechBuilderBase.h  TransBuilderBase.h  VoskBuilder.cpp  VoskBuilder.h  XFTransBuilder.cpp  XFTransBuilder.h
src/builder/ASR/: AliNLSBuilder.cpp  AliNLSBuilder.h  FunASRBuilder.cpp  FunASRBuilder.h  HwCloudRASRBuilder.cpp  HwCloudRASRBuilder.h  MSSAPIBuilder.cpp  MSSAPIBuilder.h  XFRtASRBuilder.cpp  XFRtASRBuilder.h
src/builder/Trans/: GSTransBuilder.cpp  GSTransBuilder.h  XFTransBuilder.cpp  XFTransBuilder.h
src/builder/asr/: AliNLSBuilder.cpp  AliNLSBuilder.h  HwCloudRASRBuilder.cpp  HwCloudRASRBuilder.h  MSSAPIBuilder.cpp  XFRtASRBuilder.cpp  XFRtASRBuilder.h  YiTuASRBuilder.cpp  YiTuASRBuilder.h
src/builder/base/: ASRBuilderBase.h  PropBuilderBase.h  PropBuilders.cpp  TransBuilderBase.h
src/qxfyun/: RTASR.cpp  RTASR.h
src/util/QCpr/: QCprManager  QCprManager.cpp  QCprManager.h
src/util/QWebsocketpp/: QWebsocketpp  QWebsocketpp.cpp  QWebsocketpp.h
src/xfyun/: RTASR.cpp  RTASR.h
